force-app/main/default/objects/Calendar_Default_Setting__c/Calendar_Default_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Default Settings for the Calendar.</description>
    <label>Calendar Default Settings</label>
</CustomObject>