force-app/main/default/objects/Calendar_Default_Setting__c/fields/Default_Calendar_View__c.field-meta.xml
<CustomField>
    <fullName>Default_Calendar_View__c</fullName>
    <label>Default Calendar View</label>
    <length>50</length>
    <type>Text</type>
</CustomField>