force-app/main/default/objects/Calendar_Default_Setting__c/fields/Show_Active_Campaigns_Only__c.field-meta.xml
<CustomField>
    <fullName>Show_Active_Campaigns_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Active Campaigns Only</label>
    <type>Checkbox</type>
</CustomField>