force-app/main/default/objects/Calendar_Default_Setting__c/fields/Show_Events__c.field-meta.xml
<CustomField>
    <fullName>Show_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Events</label>
    <type>Checkbox</type>
</CustomField>