force-app/main/default/objects/Calendar_Default_Setting__c/fields/Show_Historical_Events__c.field-meta.xml
<CustomField>
    <fullName>Show_Historical_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Historical Events</label>
    <type>Checkbox</type>
</CustomField>