force-app/main/default/objects/Calendar_Default_Setting__c/fields/Show_Open_Tasks_Only__c.field-meta.xml
<CustomField>
    <fullName>Show_Open_Tasks_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Open Tasks Only</label>
    <type>Checkbox</type>
</CustomField>