force-app/main/default/objects/Calendar_Default_Setting__c/fields/Show_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Show_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Tasks</label>
    <type>Checkbox</type>
</CustomField>